# civil

./: .env.example  .gitignore  Makefile  README.md  markup-syntax.txt
civil-server/: Cargo.toml
civil-server/src/: error.rs  lib.rs  server_api.rs  session.rs
civil-server/src/db/: articles.rs  deck_kind.rs  decks.rs  edges.rs  graph.rs  ideas.rs  mod.rs  notes.rs  people.rs  pg.rs  point_kind.rs  publications.rs  quotes.rs  sr.rs  stats.rs  timelines.rs  unioned.rs  users.rs
civil-server/src/handler/: articles.rs  cmd.rs  edges.rs  graph.rs  ideas.rs  mod.rs  people.rs  publications.rs  quotes.rs  sr.rs  timelines.rs  ubersetup.rs  unioned.rs  uploader.rs
civil-server/src/interop/: decks.rs  edges.rs  graph.rs  ideas.rs  mod.rs  notes.rs  people.rs  publications.rs  sr.rs  timelines.rs  unioned.rs  users.rs
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
core/: Cargo.toml
core/src/: compiler.rs  element.rs  error.rs  lexer.rs  lib.rs  parser.rs  splitter.rs
server/: .env.example  Cargo.toml  README.md
server/db/: schema.psql
server/src/: api.rs  crap_models.rs  edge_type.rs  error.rs  handle_articles.rs  handle_autocomplete.rs  handle_dates.rs  handle_decks.rs  handle_edges.rs  handle_entries.rs  handle_historic_people.rs  handle_historic_points.rs  handle_locations.rs  handle_notes.rs  handle_subjects.rs  handle_timespans.rs  handle_users.rs  interop.rs  lib.rs  model.rs  models.rs  note_linked_list_api.rs  note_parser_api.rs  note_type.rs  pg.rs  server_api.rs  session.rs  stat_api.rs  types.rs  web_common.rs
server/src/ai/: mod.rs  openai.rs  openai_interface.rs
server/src/db/: articles.rs  autocomplete.rs  bookmarks.rs  books.rs  concepts.rs  deck_kind.rs  decks.rs  dialogues.rs  edges.rs  events.rs  graph.rs  idea_kind.rs  ideas.rs  memorise.rs  mod.rs  note_kind.rs  notes.rs  people.rs  pg.rs  point_kind.rs  points.rs  predictions.rs  publications.rs  qry.rs  quotes.rs  ref_kind.rs  references.rs  search.rs  sqlite.rs  sqlite_migrations.rs  sr.rs  stats.rs  tags.rs  timelines.rs  uploader.rs  users.rs
server/src/db/sql/: autocomplete_decks.sql  autocomplete_tags.sql  books_edit.sql  deckbase_create.sql  deckbase_edit.sql  deckbase_get.sql  decks_all_for_note.sql  decks_delete.sql  decks_recent.sql  decks_search.sql  decks_search_notes.sql  decks_search_points.sql  edges_create_from_note_to_deck.sql  edges_delete_notes_tags.sql  edges_update_notes_decks.sql  events_all.sql  events_create.sql  events_edit.sql  from_deck_id_via_notes_to_decks.sql  from_decks_via_notes_to_deck_id.sql  graph.sql  idea_extras_delete.sql  ideas_all.sql  ideas_create.sql  ideas_create_extra.sql  ideas_edit.sql  ideas_edit_extra.sql  ideas_get.sql  ideas_listing_orphans.sql  ideas_listing_recent.sql  ideas_listing_single.sql  ideas_listing_zero.sql  notes_all_from_deck.sql  notes_all_ids_for_deck.sql  notes_create.sql  notes_edit.sql  notes_get.sql  people_all.sql  people_create.sql  people_edit.sql  (+28 more)
server/src/handler/: articles.rs  autocomplete.rs  bookmarks.rs  books.rs  cmd.rs  concepts.rs  dashboard.rs  dates.rs  deck_queries.rs  decks.rs  dialogues.rs  edges.rs  events.rs  graph.rs  historic_people.rs  historic_points.rs  ideas.rs  interval.rs  locations.rs  memorise.rs  mod.rs  notes.rs  people.rs  points.rs  predictions.rs  publications.rs  quotes.rs  recent.rs  search.rs  sr.rs  stats.rs  subjects.rs  tags.rs  timelines.rs  timespans.rs  ubersetup.rs  uploader.rs  users.rs
server/src/interop/: articles.rs  autocomplete.rs  bookmarks.rs  books.rs  concepts.rs  dashboard.rs  dates.rs  decks.rs  dialogues.rs  edges.rs  events.rs  font.rs  graph.rs  historic_people.rs  historic_points.rs  ideas.rs  key.rs  locations.rs  memorise.rs  mod.rs  notes.rs  people.rs  points.rs  predictions.rs  publications.rs  quotes.rs  references.rs  search.rs  sr.rs  stats.rs  subjects.rs  tags.rs  timelines.rs  uploader.rs  users.rs
server/src/persist/: articles.rs  autocomplete.rs  books.rs  dashboard.rs  dates.rs  decks.rs  edges.rs  events.rs  historic_people.rs  historic_points.rs  ideas.rs  locations.rs  mod.rs  notes.rs  people.rs  pg.rs  points.rs  search.rs  subjects.rs  tags.rs  timespans.rs  users.rs
server/src/persist/sql/: articles_all.sql  articles_create.sql  articles_edit.sql  articles_get.sql  autocomplete.sql  autocomplete_decks.sql  books_all.sql  books_create.sql  books_edit.sql  books_get.sql  dashboard_tags.sql  dates_create.sql  decks_all_for_note.sql  decks_delete.sql  decks_points_create.sql  decks_referenced.sql  decks_that_mention.sql  edges_create_from_deck_to_note.sql  edges_create_from_idea_to_note.sql  edges_create_from_note.sql  edges_create_from_note_to_deck.sql  edges_create_from_note_to_tag.sql  edges_create_from_tag_to_note.sql  edges_create_to_note.sql  edges_delete_deck.sql  edges_delete_decks_notes_with_deck_id.sql  edges_delete_decks_notes_with_note_id.sql  edges_delete_ideas_notes_with_idea_id.sql  edges_delete_ideas_notes_with_note_id.sql  (+61 more)
server/src/sql/: articles_all.sql  articles_all_decked.sql  articles_create.sql  articles_create_decked.sql  articles_edit.sql  articles_get.sql  articles_that_mention.sql  autocomplete.sql  dates_delete.sql  dates_edit.sql  dates_get.sql  decks_all.sql  decks_get.sql  decks_referenced_decked.sql  decks_that_mention.sql  delete.sql  delete_owned.sql  edges_create.sql  edges_create_from_note.sql  edges_create_to_note.sql  edges_delete.sql  edges_delete_deck.sql  edges_delete_note.sql  entries_all.sql  entries_edit.sql  entries_get.sql  historic_people_all.sql  historic_people_all_derived.sql  historic_people_create.sql  historic_people_delete.sql  historic_people_edit.sql  historic_people_get.sql  historic_people_get_derived.sql  historic_people_referenced.sql  historic_people_referenced_decked.sql  historic_people_that_mention.sql  historic_points_all.sql  historic_points_all_decked.sql  historic_points_create.sql  historic_points_create_decked.sql  (+22 more)
shared/: Cargo.toml
shared/src/: colour.rs  compiler.rs  element.rs  error.rs  lexer.rs  lib.rs  parser.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+595 files in other folders)
