[package]
name = "civil"
version = "0.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

actix-files = "0.6.0-beta.4"
actix-multipart = "0.4.0-beta.4"
actix-rt = "2.2.0"
actix-session = "0.5.0-beta.1"
actix-threadpool = "0.3.3"
actix-web = "4.0.0-beta.5"

chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.11"
dotenv = "0.15.0"
futures = "0.3.14"
rand = "0.8.3"
rust-argon2 = "0.8.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

tokio = { version = "1.5.0", features = ["macros"] }

deadpool-postgres = {version = "0.7", default-features = false}
tokio-postgres = { version = "0.7.1", features = ["with-chrono-0_4"] }

# depend on tokio-postgres
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
postgres-types = {version = "0.2.1", features = ["derive"]}


civil-shared = { path = "../civil-shared" }
