[package]
name = "core"
version = "0.1.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
