[package]
name = "civil-server"
version = "1.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-threadpool = "0.3.3"
actix-web = "4.9.0"

backtrace = "0.3"
chatgpt_rs = "1.2.3"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.28"
rand = "0.8.5"
rust-argon2 = "2.0.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_repr = "0.1.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

civil-shared = { path = "../shared" }

r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
rusqlite_migration = "1.0.2"
