[package]
name = "civil-server"
version = "1.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"

chatgpt_rs = "1.2.3"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.9.2"
rust-argon2 = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
thiserror = "2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

civil-shared = { path = "../shared" }

r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
rusqlite_migration = "2.3.0"


[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
large_enum_variant = "warn"
