[package]
name = "civil-shared"
version = "1.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.2"
serde = "1.0.188"
serde_derive = "1.0.188"
