[package]
name = "civil-wasm"
version = "1.0.0"
authors = ["Inderjit Gill <email@indy.io>"]
license = "AGPL-3.0-or-later"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_log", "console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
cfg-if = "1.0.0"
civil-shared = { path = "../../shared" }
log = "0.4"
console_log = { version = "1.0.0", optional = true }
wasm-bindgen = "^0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Include function names in the `.wasm` for better debugging and
# profiling. Comment this out if you're trying to create the smallest `.wasm`
# binaries you can.
debug = false

# # Uncomment these lines to create smaller `.wasm` binaries, at the cost of
# # longer compile times.
codegen-units = 1
incremental = false
lto = true
opt-level = "z"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
